[package]
name = "contracalc-rs"
version = "0.1.0"
authors = [
    "Charlotte Patton"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.8.2"
glium = "0.32.1"
image = "0.24.7"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"

